# OpenCLWindow

./: CMakeLists.txt  README.md
include/: KeyListener.h  Listeners.h  MouseListener.h  OpenClWindow.h
src/cpp/: OpenClWindow.cpp
